# filenames

./: .gitignore  LICENSE  Makefile  README.md  filenames.cabal
.circleci/: config.yml
src/: Filenames.hs  Main.hs
src/exe/: Main.hs
src/integration/: Main.hs
src/lib/: BuiltIns.hs  Cli.hs  CodeGen.hs  CustomPrelude.hs  Exceptions.hs  Exe.hs  Filenames.hs  Optimizer.hs  Parsers.hs  Runtime.hs  TypeChecker.hs  Types.hs
src/lib/Schema/: Exceptions.hs  Parser.hs  TypeChecker.hs  Types.hs
src/test/: LexerTests.hs  Main.hs  RuntimeTests.hs  SchemaParseTests.hs  SchemaTypeTests.hs  TypeCheckerTests.hs
src/test/Schema/: ParseTests.hs  TypeTests.hs
src/unit/: FrontEndTests.hs  Main.hs  ParserTests.hs  RuntimeTests.hs  TypeCheckerTests.hs
test/: Main.hs
