cabal-version:       >=1.10

name:                filenames
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Nathaniel May
maintainer:          nathanieldmay@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

library
  exposed-modules:     Filenames
  build-depends:       base ==4.13.*
                      ,containers ==0.6.*
                      ,megaparsec ==9.0.*
                      ,text ==1.2.*
  default-extensions:  OverloadedStrings
  ghc-options:         -Wall
                       -fno-warn-orphans    
  hs-source-dirs:      src
  default-language:    Haskell2010              

executable filenames
  main-is:             Main.hs
  build-depends:       base ==4.13.*
                      ,containers ==0.6.*
                      ,megaparsec ==9.0.*
                      ,text ==1.2.*
  default-extensions:  OverloadedStrings
  ghc-options:         -Wall
                       -fno-warn-orphans
  hs-source-dirs:      src
  --other-modules:                   
  default-language:    Haskell2010

test-suite unit
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test
  build-depends:       base ==4.13.*
                      ,filenames
                      ,HUnit
                      ,megaparsec ==9.0.*
                      ,test-framework
                      ,test-framework-hunit
                      ,text ==1.2.*
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010