cabal-version:         >=1.10
  
name:                  filenames
version:               0.1.0.0
synopsis:              Command line tool to identify filenames outside a defined schema.
description:           A schema file is provided to describe the desired filename schema. When pointed at a directory, this tool will identify the files that do not follow the specified schema.
license:               MIT
license-file:          LICENSE
author:                Nathaniel May
maintainer:            nathanieldmay@gmail.com
category:              Command Line
build-type:            Simple
extra-source-files:    README.md

source-repository      head
  type:                git
  location:            https://github.com/nathaniel-may/filenames/

library
  exposed-modules:     CustomPrelude
                      ,Exe
                      ,Parsers
  hs-source-dirs:      src/lib
  build-depends:       base ==4.13.*
                      ,containers ==0.6.*
                      ,directory ==1.3.*
                      ,megaparsec ==9.0.*
                      ,optparse-applicative ==0.16.*
                      ,safe ==0.3.*
                      ,text ==1.2.*
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings
  ghc-options:         -Wall
                       -fno-warn-orphans
                       -O2
  default-language:    Haskell2010              

executable filenames
  main-is:             Main.hs
  hs-source-dirs:      src/exe
  build-depends:       base ==4.13.*
                      ,filenames
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings
  ghc-options:         -Wall
                       -fno-warn-orphans
                       -O2
  --other-modules:                   
  default-language:    Haskell2010

test-suite unit
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      src/test
  other-modules:       SchemaParseTests
  build-depends:       base ==4.13.*
                      ,filenames
                      ,HUnit
                      ,megaparsec ==9.0.*
                      ,test-framework
                      ,test-framework-hunit
                      ,text ==1.2.*
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings
  ghc-options:         -Wall
                       -fno-warn-orphans
                       -O2
  default-language:    Haskell2010